# claude-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  SDK_ANALYSIS.md
examples/: README.md  can_use_tool_example.rs  error_handling_demo.rs  hooks_example.rs  interactive_chat.rs  message_parser_demo.rs  run_all.sh  sdk_mcp_example.rs  session_continuation.rs  session_forking.rs  simple_real_query.rs  types_demo.rs  v2_message_extensions.rs  v2_simple_ask.rs  verify_library.rs
examples/v1/: sdk_mcp_example.rs  session_resuming.rs  streaming_query_example.rs  test_interactive.rs  verify_library.rs
examples/v2/: builder_pattern.rs  callback_macros.rs  complete_workflow.rs  extension_traits.rs  facade_functions.rs  prelude_module.rs  v2_message_extensions.rs  v2_simple_ask.rs  v2_simplified_callbacks.rs
src/: builders.rs  client.rs  errors.rs  extensions.rs  facade.rs  hooks.rs  lib.rs  macros.rs  mcp_server.rs  message_parser.rs  permissions.rs  prelude.rs  query.rs  simple_query.rs  streaming_query.rs  transport.rs  types.rs
tests/: client_tests.rs  errors_tests.rs  message_parser_tests.rs  query_tests.rs  types_tests.rs
